Refactored social page icon css to be in a more sensible place and also fixed bug which caused mouse over on small screens to not work as expected for all social page icons (except YouTube).

--- a/scss/_ru.scss
+++ b/scss/_ru.scss
@@ -22,83 +22,6 @@
     background-position: -249px -5px;
 }
 
-.ru-social-icon-facebook-40x40 {
-    width: 40px;
-    height: 40px;
-    background-position: -371px -5px;
-}
-
-.ru-social-icon-facebook-40x40-hover {
-    width: 40px;
-    height: 40px;
-    background-position: -371px -55px;
-}
-
-.ru-social-icon-facebook-48x48 {
-    width: 48px;
-    height: 48px;
-    background-position: -371px -105px;
-}
-
-.ru-social-icon-facebook-hover-48x48 {
-    width: 48px;
-    height: 48px;
-    background-position: -371px -163px;
-}
-
-.ru-social-icon-google-40x40 {
-    width: 40px;
-    height: 40px;
-    background-position: -5px -221px;
-}
-
-.ru-social-icon-google-40x40-hover {
-    width: 40px;
-    height: 40px;
-    background-position: -55px -221px;
-}
-
-.ru-social-icon-google-48x48 {
-    width: 48px;
-    height: 48px;
-    background-position: -105px -221px;
-}
-
-.ru-social-icon-google-hover-48x48 {
-    width: 48px;
-    height: 48px;
-    background-position: -163px -221px;
-}
-
-.ru-social-icon-twitter-40x40 {
-    width: 40px;
-    height: 40px;
-    background-position: -221px -221px;
-}
-
-.ru-social-icon-twitter-40x40-hover {
-    width: 40px;
-    height: 40px;
-    background-position: -271px -221px;
-}
-
-.ru-social-icon-twitter-48x48 {
-    width: 48px;
-    height: 48px;
-    background-position: -321px -221px;
-}
-
-.ru-social-icon-twitter-hover {
-    width: 68px;
-    height: 68px;
-    background-position: -379px -221px;
-}
-
-.ru-social-icon-twitter-hover-48x48 {
-    width: 48px;
-    height: 48px;
-    background-position: -5px -299px;
-}
 .ru-info-icon {
     float: left;
     width: 34px;
